more civic changes

--- a/localisation/english/replace/zz_evolved_councilors_l_english.yml
+++ b/localisation/english/replace/zz_evolved_councilors_l_english.yml
@@ -376,7 +376,7 @@
 
 	# /
 	# Basic civics
-		councilor_civic_tec_regular_capitalized_innovation:0 "Scientific tec_mogul"
+		councilor_civic_tec_regular_capitalized_innovation:0 "Scientific Mogul"
 		councilor_civic_tec_regular_capitalized_innovation_female:0 "$councilor_civic_tec_regular_capitalized_innovation$"
 		councilor_civic_tec_regular_capitalized_innovation_desc:0 "The $TITLE$ has prowess on scientific and economic affairs, serving as link between private research industries and the empire itself."
 		councilor_civic_tec_regular_capitalized_innovation_custom_modifier:0 "NOT USED"
