--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -847,6 +847,8 @@
 	job_tec_landowner:0 "Landowner"
 	job_tec_landowner_plural:0 "Landowners"
 	job_tec_landowner_desc:0 "These appointed and exalted individuals have earned their right to own and dominate large extensions of a planet, whether it has been via martial, political or influential prowess."
+	job_tec_landowner_effect_desc_base:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
+	job_tec_landowner_effect_desc_corporate:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
 	job_tec_landowner_effect_desc:0 "£job_tec_landowner£ $job_tec_landowner_plural$ produce £mod_planet_stability_add£ §Y$PLANET_STABILITY_TITLE$§!, decrease £crime£ §Y$PLANET_CRIME_TITLE$§! and spawn £defense_army£ §YDefense Armies§!."
 	mod_job_tec_landowner_add:0 "$job_tec_landowner$ Jobs"
 	mod_job_tec_landowner_per_pop:0 "§G+1§! $job_tec_landowner$ Job Per $VALUE$ Pops"
@@ -855,6 +857,8 @@
 	job_tec_peasant:0 "Peasant"
 	job_tec_peasant_plural:0 "Peasants"
 	job_tec_peasant_desc:0 "Masses of generally hardworking, loyal and obliging followers of nobility whose only purpose is to ensure comfort and whims of their superiors."
+	job_tec_peasant_effect_desc_base:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
+	job_tec_peasant_effect_desc_corporate:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
 	job_tec_peasant_effect_desc:0 "£job_tec_peasant£ $job_tec_peasant_plural$ produce £mod_planet_amenities_add£ §YAmenities§!."
 	mod_job_tec_peasant_add:0 "$job_tec_peasant$ Jobs"
 	mod_job_tec_peasant_per_pop:0 "§G+1§! $job_tec_peasant$ Job Per $VALUE$ Pops"
@@ -1187,6 +1191,8 @@
 	job_tec_mercenary_plural:0 "Mercenaries"
 	job_tec_mercenary_desc:0 "Professional and well trained soldiers, loyal to their paymaster."
 	job_tec_mercenary_effect_desc:0 "£job_tec_mercenary£ $job_tec_mercenary_plural$ increase §Y$tec_loc_naval_cap$§!, spawn £defense_army£ §YDefense Armies§!, produce §Y$tec_loc_trade_value$§! and requires §YConsumer Goods§! for upkeep."
+	job_tec_mercenary_effect_desc_standard:0 "£job_tec_mercenary£ $job_tec_mercenary_plural$ increase §Y$tec_loc_naval_cap$§!, spawn £defense_army£ §YDefense Armies§!, produce §Y$tec_loc_trade_value$§! and requires §YConsumer Goods§! for upkeep."
+	job_tec_mercenary_effect_desc_corporate:0 "£job_tec_mercenary£ $job_tec_mercenary_plural$ increase §Y$tec_loc_naval_cap$§!, spawn £defense_army£ §YDefense Armies§!, produce §Y$tec_loc_trade_value$§! and requires §YConsumer Goods§! for upkeep."
 	mod_job_tec_mercenary_add:0 "$job_tec_mercenary$ Jobs"
 	mod_job_tec_mercenary_per_pop:0 "§G+1§! $job_tec_mercenary$ Job per $VALUE$ Pops"
 	mod_job_tec_mercenary_per_pop_short:0 "\n§G+1§! £mod_job_tec_mercenary_add£ per $VALUE$ £pop£"
@@ -1304,6 +1310,8 @@
 	job_tec_labour_hero_plural:0 "Labour Heros"
 	job_tec_labour_hero_desc:0 "An individual, recognized for his outstanding labour capabilities and capacities to lead others with respect and dignity."
 	job_tec_labour_hero_effect_desc:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ produce $tec_loc_basic_resources$ based on planet designation, and §Y$tec_loc_unity$§!."
+	job_tec_labour_hero_effect_desc_standard:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ produce $tec_loc_basic_resources$ based on planet designation, and §Y$tec_loc_unity$§!."
+	job_tec_labour_hero_effect_desc_corporate:0 "£job_tec_labour_hero£ $job_tec_labour_hero_plural$ produce $tec_loc_basic_resources$ based on planet designation, and §Y$tec_loc_unity$§!."
 	mod_job_tec_labour_hero_add:0 "$job_tec_labour_hero$ Jobs"
 	mod_job_tec_labour_hero_per_pop:0 "§G+1§! $job_tec_labour_hero$ Job per $VALUE$ Pops"
 	mod_job_tec_labour_hero_per_pop_short:0 "\n§G+1§! £mod_job_tec_labour_hero_add£ per $VALUE$ £pop£"
@@ -1313,6 +1321,8 @@
 	job_tec_transcendent_plural:0 "Transcendents"
 	job_tec_transcendent_desc:0 "These individuals are considered to have reached an illuminated state of consciousness."
 	job_tec_transcendent_effect_desc:0 "£job_tec_transcendent£ $job_tec_transcendent_plural$ produce fair amount of §Y$tec_loc_unity$§!, £trigger_tec_research£ §YResearch§!, and reduce planetary §YCrime§!."
+	job_tec_transcendent_effect_desc_standard:0 "£job_tec_transcendent£ $job_tec_transcendent_plural$ produce fair amount of §Y$tec_loc_unity$§!, £trigger_tec_research£ §YResearch§!, and reduce planetary §YCrime§!."
+	job_tec_transcendent_effect_desc_corporate:0 "£job_tec_transcendent£ $job_tec_transcendent_plural$ produce fair amount of §Y$tec_loc_unity$§!, £trigger_tec_research£ §YResearch§!, and reduce planetary §YCrime§!."
 	mod_job_tec_transcendent_add:0 "$job_tec_transcendent$ Jobs"
 	mod_job_tec_transcendent_per_pop:0 "§G+1§! $job_tec_transcendent$ Job per $VALUE$ Pops"
 	mod_job_tec_transcendent_per_pop_short:0 "\n§G+1§! £mod_job_tec_transcendent_add£ per $VALUE$ £pop£"
@@ -1814,6 +1824,8 @@
 	job_tec_memorialist:0 "Memorialist"
 	job_tec_memorialist_plural:0 "$job_tec_memorialist$s"
 	job_tec_memorialist_desc:0 "Stories must be told, retold and contextualized; these scholars translate those memories into living story."
+	job_tec_memorialist_effect_desc_base:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
+	job_tec_memorialist_effect_desc_corporate:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
 	job_tec_memorialist_effect_desc:0 "£job_tec_memorialist£ $job_tec_memorialist_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_society$§!."
 	mod_job_tec_memorialist_add:0 "$job_tec_memorialist$ Jobs"
 	mod_job_tec_memorialist_per_pop:0 "§G+1§! $job_tec_memorialist$ Job Per $VALUE$ Pops"
@@ -1852,10 +1864,11 @@
 	building_tec_reanimation_necropoli_3_desc:0 "TO DO"
  # /
  # Genetic Ascendancy
-		council_agenda_agenda_tec_genetic_ascendancy_name:0 "Epigenetic Restoration"
-		building_tec_epigenetic_chambers:0 "Epigenetic Chambers"
-		building_tec_epigenetic_chambers_plural:0 "$building_tec_epigenetic_chambers$"
-		building_tec_epigenetic_chambers_desc:0 "TO DO."
+	council_agenda_agenda_tec_genetic_ascendancy_name:0 "Epigenetic Restoration"
+
+	building_tec_epigenetic_chambers:0 "Epigenetic Chambers"
+	building_tec_epigenetic_chambers_plural:0 "$building_tec_epigenetic_chambers$"
+	building_tec_epigenetic_chambers_desc:0 "TO DO."
  # /
  # Labrats
 	job_tec_labrat:0 "Test Subject"
@@ -1863,6 +1876,19 @@
 	job_tec_labrat_desc:0 ""
 	job_tec_labrat_effect_desc:0 ""
 	mod_job_tec_labrat_add:0 ""
+ # /
+ # Forced Reeducation
+	building_tec_reeducation_facilities:0 "Reeducation Facilities"
+	building_tec_reeducation_facilities_plural:0 "Reeducation Facilities"
+	building_tec_reeducation_facilities_desc:0 "TO DO"
+
+	job_tec_reeducated_subject:0 "Reeducated Subject"
+	job_tec_reeducated_subject_plural:0 "Reeducated Subjects"
+	job_tec_reeducated_subject_desc:0 "TO DO."
+	job_tec_reeducated_subject_effect_desc:0 "£job_tec_reeducated_subject£ $job_tec_reeducated_subject_plural$ produce resources based on the £planet£ Planet Designation, and are reeducated to follow the empire ethics"
+	mod_job_tec_reeducated_subject_add:0 "$job_tec_reeducated_subject$ Jobs"
+	mod_job_tec_reeducated_subject_per_pop:0 "§G+1§! $job_tec_reeducated_subject$ Job Per $VALUE$ Pops"
+	mod_job_tec_reeducated_subject_per_pop_short:0 "\n§G+1§! £mod_job_tec_reeducated_subject_add£ per $VALUE$ £pop£"
  # /
  # Biohive
 		building_tec_bio_reclamation_pool_1:0 "Reclamation Pool"
@@ -2278,18 +2304,24 @@
 		building_tec_bastion:0 "Bastion"
 		building_tec_bastion_desc:0 "A massive and advanced fortress complex with expanded garrison and training facilities for soldiers, and a solid stockpile of military warfare and defensive measures."
 
-		building_tec_naval_academy:0 "Naval Command Post"
-		building_tec_naval_academy_desc:0 "A highly specialized military installation where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
+		building_tec_naval_academy_1:0 "Naval Command Post"
+		building_tec_naval_academy_1_plural:0 "Naval Command Posts"
+		building_tec_naval_academy_1_desc:0 "A highly specialized military installation where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
 		building_tec_naval_academy_2:0 "Naval Command Center"
+		building_tec_naval_academy_2_plural:0 "Naval Command Centers"
 		building_tec_naval_academy_2_desc:0 "Planetary specialized military installations where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
-		building_tec_naval_academy_3:0 "Naval Command Center"
+		building_tec_naval_academy_3:0 "Naval Command Nexus"
+		building_tec_naval_academy_3_plural:0 "Naval Command Nexus"
 		building_tec_naval_academy_3_desc:0 "Planetary specialized military installations where armada naval trainees learn the basics for controlling a fleet, and naval operations are coordinated with the whole empire efforts."
 
-		building_tec_naval_gestalt:0 "Naval Control Node"
-		building_tec_naval_gestalt_desc:0 "A highly specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
+		building_tec_naval_gestalt_1:0 "Naval Control Node"
+		building_tec_naval_gestalt_1_plural:0 "Naval Control Nodes"
+		building_tec_naval_gestalt_1_desc:0 "A highly specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
 		building_tec_naval_gestalt_2:0 "Naval Control Relay"
+		building_tec_naval_gestalt_2_plural:0 "Naval Control Relays"
 		building_tec_naval_gestalt_2_desc:0 "Planetary specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
 		building_tec_naval_gestalt_3:0 "Naval Control Nexus"
+		building_tec_naval_gestalt_3_plural:0 "Naval Control Nexus"
 		building_tec_naval_gestalt_3_desc:0 "Planetary specialized installation where drones remotely commands or direct controll ships and fleets, and naval operations are coordinated with the whole collective efforts."
 	# /
 	# Jobs
