--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -452,7 +452,14 @@
 	concept_tec_ruler_job_tec_landowner_icon: "£job_tec_landowner£ $job_tec_landowner$"
 	concept_tec_ruler_job_tec_landowner_plural: "$job_tec_landowner_plural$"
 	concept_tec_ruler_job_tec_landowner_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
-	concept_tec_ruler_job_tec_landowner_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+	concept_tec_ruler_job_tec_landowner_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_base_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
+
+	concept_tec_ruler_job_tec_landowner_corporate: "$job_tec_landowner$"
+	concept_tec_ruler_job_tec_landowner_corporate_alias: "$job_tec_landowner$"
+	concept_tec_ruler_job_tec_landowner_corporate_icon: "£job_tec_landowner£ $job_tec_landowner$"
+	concept_tec_ruler_job_tec_landowner_corporate_plural: "$job_tec_landowner_plural$"
+	concept_tec_ruler_job_tec_landowner_corporate_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
+	concept_tec_ruler_job_tec_landowner_corporate_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_corporate_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
 	#concept_tec_ruler_job_BASE: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_alias: "$job_BASE$"
@@ -539,6 +546,48 @@
 	concept_tec_specialist_job_death_chronicler_plural_icon: "£job_death_chronicler£ $job_death_chronicler_plural$"
 	concept_tec_specialist_job_death_chronicler_desc: "§L$job_death_chronicler_desc$§!\n\n$job_death_chronicler_effect_desc$\n\nStratum: §Y$pop_cat_specialist$§!\nEffect based on §YEthics§!\n$tec_loc_stability$: §G+2.5§!\nProduces: §Y£unity£ 4§!\nUpkeep: §Y£consumer_goods£ 3§!"
 
+	concept_tec_specialist_job_tec_labour_hero: "$job_tec_labour_hero$"
+	concept_tec_specialist_job_tec_labour_hero_alias: "$job_tec_labour_hero$"
+	concept_tec_specialist_job_tec_labour_hero_icon: "£job_tec_labour_hero£ $job_tec_labour_hero$"
+	concept_tec_specialist_job_tec_labour_hero_plural: "$job_tec_labour_hero_plural$"
+	concept_tec_specialist_job_tec_labour_hero_plural_icon: "£job_tec_labour_hero£ $job_tec_labour_hero_plural$"
+	concept_tec_specialist_job_tec_labour_hero_desc: "§L$job_tec_labour_hero_desc$§!\n\n$job_tec_labour_hero_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_labour_hero_corporate: "$job_tec_labour_hero$"
+	concept_tec_specialist_job_tec_labour_hero_corporate_alias: "$job_tec_labour_hero$"
+	concept_tec_specialist_job_tec_labour_hero_corporate_icon: "£job_tec_labour_hero£ $job_tec_labour_hero$"
+	concept_tec_specialist_job_tec_labour_hero_corporate_plural: "$job_tec_labour_hero_plural$"
+	concept_tec_specialist_job_tec_labour_hero_corporate_plural_icon: "£job_tec_labour_hero£ $job_tec_labour_hero_plural$"
+	concept_tec_specialist_job_tec_labour_hero_corporate_desc: "§L$job_tec_labour_hero_desc$§!\n\n$job_tec_labour_hero_effect_desc_corporate$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_mercenary: "$job_tec_mercenary$"
+	concept_tec_specialist_job_tec_mercenary_alias: "$job_tec_mercenary$"
+	concept_tec_specialist_job_tec_mercenary_icon: "£job_tec_mercenary£ $job_tec_mercenary$"
+	concept_tec_specialist_job_tec_mercenary_plural: "$job_tec_mercenary_plural$"
+	concept_tec_specialist_job_tec_mercenary_plural_icon: "£job_tec_mercenary£ $job_tec_mercenary_plural$"
+	concept_tec_specialist_job_tec_mercenary_desc: "§L$job_tec_mercenary_desc$§!\n\n$job_tec_mercenary_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_mercenary_corporate: "$job_tec_mercenary$"
+	concept_tec_specialist_job_tec_mercenary_corporate_alias: "$job_tec_mercenary$"
+	concept_tec_specialist_job_tec_mercenary_corporate_icon: "£job_tec_mercenary£ $job_tec_mercenary$"
+	concept_tec_specialist_job_tec_mercenary_corporate_plural: "$job_tec_mercenary_plural$"
+	concept_tec_specialist_job_tec_mercenary_corporate_plural_icon: "£job_tec_mercenary£ $job_tec_mercenary_plural$"
+	concept_tec_specialist_job_tec_mercenary_corporate_desc: "§L$job_tec_mercenary_desc$§!\n\n$job_tec_mercenary_effect_desc_corporate$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_transcendent: "$job_tec_transcendent$"
+	concept_tec_specialist_job_tec_transcendent_alias: "$job_tec_transcendent$"
+	concept_tec_specialist_job_tec_transcendent_icon: "£job_tec_transcendent£ $job_tec_transcendent$"
+	concept_tec_specialist_job_tec_transcendent_plural: "$job_tec_transcendent_plural$"
+	concept_tec_specialist_job_tec_transcendent_plural_icon: "£job_tec_transcendent£ $job_tec_transcendent_plural$"
+	concept_tec_specialist_job_tec_transcendent_desc: "§L$job_tec_transcendent_desc$§!\n\n$job_tec_transcendent_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_transcendent_corporate: "$job_tec_transcendent$"
+	concept_tec_specialist_job_tec_transcendent_corporate_alias: "$job_tec_transcendent$"
+	concept_tec_specialist_job_tec_transcendent_corporate_icon: "£job_tec_transcendent£ $job_tec_transcendent$"
+	concept_tec_specialist_job_tec_transcendent_corporate_plural: "$job_tec_transcendent_plural$"
+	concept_tec_specialist_job_tec_transcendent_corporate_plural_icon: "£job_tec_transcendent£ $job_tec_transcendent_plural$"
+	concept_tec_specialist_job_tec_transcendent_corporate_desc: "§L$job_tec_transcendent_desc$§!\n\n$job_tec_transcendent_effect_desc_corporate$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
 	# Drones
 	concept_tec_specialist_job_bath_attendant_hive: "$job_bath_attendant_hive$"
 	concept_tec_specialist_job_bath_attendant_hive_alias: "$job_bath_attendant_hive$"
@@ -596,7 +645,14 @@
 	concept_tec_worker_job_tec_peasant_icon: "£job_slave_toiler£ $job_tec_peasant$"
 	concept_tec_worker_job_tec_peasant_plural: "$job_tec_peasant_plural$"
 	concept_tec_worker_job_tec_peasant_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
-	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_peasant_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_base_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_peasant_corporate: "$job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_corporate_alias: "$job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_corporate_icon: "£job_slave_toiler£ $job_tec_peasant$"
+	concept_tec_worker_job_tec_peasant_corporate_plural: "$job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_corporate_plural_icon: "£job_slave_toiler£ $job_tec_peasant_plural$"
+	concept_tec_worker_job_tec_peasant_corporate_desc: "§L$job_tec_peasant_desc$§!\n\n$job_tec_peasant_corporate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_necromonger: "$job_tec_necromonger$"
 	concept_tec_worker_job_tec_necromonger_alias: "$job_tec_necromonger$"
@@ -633,6 +689,13 @@
 	concept_tec_worker_job_tec_memorialist_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
 	concept_tec_worker_job_tec_memorialist_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
+	concept_tec_worker_job_tec_memorialist_corporate: "$job_tec_memorialist$"
+	concept_tec_worker_job_tec_memorialist_corporate_alias: "$job_tec_memorialist$"
+	concept_tec_worker_job_tec_memorialist_corporate_icon: "£job_tec_memorialist£ $job_tec_memorialist$"
+	concept_tec_worker_job_tec_memorialist_corporate_plural: "$job_tec_memorialist_plural$"
+	concept_tec_worker_job_tec_memorialist_corporate_plural_icon: "£job_tec_memorialist£ $job_tec_memorialist_plural$"
+	concept_tec_worker_job_tec_memorialist_corporate_desc: "§L$job_tec_memorialist_desc$§!\n\n$job_tec_memorialist_corporate_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
 	concept_tec_worker_job_tec_labrat: "$job_tec_labrat$"
 	concept_tec_worker_job_tec_labrat_alias: "$job_tec_labrat$"
 	concept_tec_worker_job_tec_labrat_icon: "£job_tec_labrat£ $job_tec_labrat$"
@@ -640,12 +703,19 @@
 	concept_tec_worker_job_tec_labrat_plural_icon: "£job_tec_labrat£ $job_tec_labrat_plural$"
 	concept_tec_worker_job_tec_labrat_desc: "§L$job_tec_labrat_desc$§!\n\n$job_tec_labrat_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
+	concept_tec_worker_job_tec_reeducated_subject: "$job_tec_reeducated_subject$"
+	concept_tec_worker_job_tec_reeducated_subject_alias: "$job_tec_reeducated_subject$"
+	concept_tec_worker_job_tec_reeducated_subject_icon: "£job_tec_reeducated_subject£ $job_tec_reeducated_subject$"
+	concept_tec_worker_job_tec_reeducated_subject_plural: "$job_tec_reeducated_subject_plural$"
+	concept_tec_worker_job_tec_reeducated_subject_plural_icon: "£job_tec_reeducated_subject£ $job_tec_reeducated_subject_plural$"
+	concept_tec_worker_job_tec_reeducated_subject_desc: "§L$job_tec_reeducated_subject_desc$§!\n\n$job_tec_reeducated_subject_effect_desc$\n\nStratum: §Y$pop_cat_slave$§!\nProduces:\n\n"
+
 	concept_tec_worker_job_tec_memorialist_drone: "$job_tec_memorialist_drone$"
 	concept_tec_worker_job_tec_memorialist_drone_alias: "$job_tec_memorialist_drone$"
 	concept_tec_worker_job_tec_memorialist_drone_icon: "£job_tec_memorialist_drone£ $job_tec_memorialist_drone$"
 	concept_tec_worker_job_tec_memorialist_drone_plural: "$job_tec_memorialist_drone_plural$"
 	concept_tec_worker_job_tec_memorialist_drone_plural_icon: "£job_tec_memorialist_drone£ $job_tec_memorialist_drone_plural$"
-	concept_tec_worker_job_tec_memorialist_drone_desc: "§L$job_tec_memorialist_drone_desc$§!\n\n$job_tec_memorialist_drone_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+	concept_tec_worker_job_tec_memorialist_drone_desc: "§L$job_tec_memorialist_drone_desc$§!\n\n$job_tec_memorialist_drone_effect_desc$\n\nStratum: §Y$pop_cat_simple_drone$§!\nProduces:\n\n"
 
  # /
  # Unsorted
