--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -78,12 +78,15 @@
 
 	tec_loc_stability: "£stability£ $PLANET_STABILITY_TITLE$"
 	tec_loc_trade_value_icon: "£trade_value£"
+	tec_loc_trade_value_icon: "£trade_value£"
 	tec_loc_trade_value: "£trade_value£ $TRADE_VALUE$"
 	tec_loc_trade: "$tec_loc_trade_value$"
+	tec_loc_trade_icon: "£trade_value£"
 	tec_loc_pop_growth: "£mod_pop_growth_speed£ $MOD_POP_GROWTH_SPEED$"
 	tec_loc_pop_growth_icon: "£mod_pop_growth_speed£"
 	tec_loc_job_output: "£job£ Job Output"
 
+	tec_loc_defense_army:0 "£defense_army£ Defense Army"
 	tec_loc_defense_armies:0 "£defense_army£ Defense Armies"
 
 	tec_loc_building_slots: "$planet_automation_building_slot$"
