more civic loc changes

--- a/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
+++ b/localisation/english/zz_evolved_building_jobs_megas_l_english.yml
@@ -1084,12 +1084,15 @@
 
  # ------------------------------------------------- BankCorp
 	building_tec_bank_office:0 "Mercantile Complex"
+	building_tec_bank_office_plural:0 "Mercantile Complexes"
 	building_tec_bank_office_desc:0 "Vast sums of wealth are directed by the bankers who work in this complex of offices and plazas."
 
 	building_tec_bank_office_2:0 "Banking Complex"
+	building_tec_bank_office_2_plural:0 "Banking Complexes"
 	building_tec_bank_office_2_desc:0 "Tremendous sums of wealth are directed by the bankers who work in this gargantuan complex of offices, plazas and complaints."
 
 	building_tec_bank_office_3:0 "Unified Banking Complex"
+	building_tec_bank_office_3_plural:0 "Unified Banking Complexes"
 	building_tec_bank_office_3_desc:0 "Unimaginable amounts of wealth are directed and amassed by the bankers who work in this gargantuan complex of offices, plazas and complaints."
 
 	job_tec_corpo_bank_director:0 "Bank Director"
@@ -1848,6 +1851,7 @@
 	job_tec_pleasure_giver_plural:0 "Pleasure Giver"
 	job_tec_pleasure_giver_desc:0 "Consecrated to a life of providing pleasure, rest and entertainment, these workers ensure the joyful distractions and excellences to whoever seeks new experiences."
 	job_tec_pleasure_giver_effect_desc:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_amenities$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
+	job_tec_pleasure_giver_effect_desc_corporate:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ turn §Y$tec_loc_trade$§! into §Y$tec_loc_unity$§! and §Y$tec_loc_happiness$§!."
 	job_tec_pleasure_giver_desire_effect_desc:0 "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$ generate §Y$tec_loc_amenities$§!, §Y$tec_loc_happiness$§! and §Y$tec_loc_pop_growth$§!."
  # /
  # Zombies
