--- a/localisation/english/zz_evolved_concepts_l_english.yml
+++ b/localisation/english/zz_evolved_concepts_l_english.yml
@@ -50,6 +50,7 @@
 	tec_loc_c_unlocks_trait:0 "§EUnlocks Trait:§!"
 
 	tec_loc_c_unlocks_building:0 "§EUnlocks Building:§!"
+	tec_loc_c_unlocks_branch:0 "§EBranch Office Building:§!"
 	tec_loc_c_unlocks_holding:0 "§EUnlocks Holding:§!"
 
 	tec_loc_c_replaces_job:0 "§EReplaces Job:§!"
@@ -461,6 +462,55 @@
 	concept_tec_ruler_job_tec_landowner_corporate_plural_icon: "£job_tec_landowner£ $job_tec_landowner_plural$"
 	concept_tec_ruler_job_tec_landowner_corporate_desc: "§L$job_tec_landowner_desc$§!\n\n$job_tec_landowner_corporate_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\n$tec_loc_defense_armies$: §G+2§!\n$tec_loc_stability$: §G+2§!\n$tec_loc_crime$: §G-15§!\nProduces: §Y£unity£ 6§!\nUpkeep: §Y£consumer_goods£ 2§!"
 
+	concept_tec_ruler_job_tec_corpo_bank_director: "$job_tec_corpo_bank_director$"
+	concept_tec_ruler_job_tec_corpo_bank_director_alias: "$job_tec_corpo_bank_director$"
+	concept_tec_ruler_job_tec_corpo_bank_director_icon: "£job_tec_corpo_bank_director£ $job_tec_corpo_bank_director$"
+	concept_tec_ruler_job_tec_corpo_bank_director_plural: "$job_tec_corpo_bank_director_plural$"
+	concept_tec_ruler_job_tec_corpo_bank_director_plural_icon: "£job_tec_corpo_bank_director£ $job_tec_corpo_bank_director_plural$"
+	concept_tec_ruler_job_tec_corpo_bank_director_desc: "§L$job_tec_corpo_bank_director_desc$§!\n\n$job_tec_corpo_bank_director_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_corpo_consultant: "$job_tec_corpo_consultant$"
+	concept_tec_ruler_job_tec_corpo_consultant_alias: "$job_tec_corpo_consultant$"
+	concept_tec_ruler_job_tec_corpo_consultant_icon: "£job_tec_corpo_consultant£ $job_tec_corpo_consultant$"
+	concept_tec_ruler_job_tec_corpo_consultant_plural: "$job_tec_corpo_consultant_plural$"
+	concept_tec_ruler_job_tec_corpo_consultant_plural_icon: "£job_tec_corpo_consultant£ $job_tec_corpo_consultant_plural$"
+	concept_tec_ruler_job_tec_corpo_consultant_desc: "§L$job_tec_corpo_consultant_desc$§!\n\n$job_tec_corpo_consultant_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_corpo_prospector: "$job_tec_corpo_prospector$"
+	concept_tec_ruler_job_tec_corpo_prospector_alias: "$job_tec_corpo_prospector$"
+	concept_tec_ruler_job_tec_corpo_prospector_icon: "£job_tec_corpo_prospector£ $job_tec_corpo_prospector$"
+	concept_tec_ruler_job_tec_corpo_prospector_plural: "$job_tec_corpo_prospector_plural$"
+	concept_tec_ruler_job_tec_corpo_prospector_plural_icon: "£job_tec_corpo_prospector£ $job_tec_corpo_prospector_plural$"
+	concept_tec_ruler_job_tec_corpo_prospector_desc: "§L$job_tec_corpo_prospector_desc$§!\n\n$job_tec_corpo_prospector_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_corpo_ecoprospector: "$job_tec_corpo_ecoprospector$"
+	concept_tec_ruler_job_tec_corpo_ecoprospector_alias: "$job_tec_corpo_ecoprospector$"
+	concept_tec_ruler_job_tec_corpo_ecoprospector_icon: "£job_tec_corpo_ecoprospector£ $job_tec_corpo_ecoprospector$"
+	concept_tec_ruler_job_tec_corpo_ecoprospector_plural: "$job_tec_corpo_ecoprospector_plural$"
+	concept_tec_ruler_job_tec_corpo_ecoprospector_plural_icon: "£job_tec_corpo_ecoprospector£ $job_tec_corpo_ecoprospector_plural$"
+	concept_tec_ruler_job_tec_corpo_ecoprospector_desc: "§L$job_tec_corpo_ecoprospector_desc$§!\n\n$job_tec_corpo_ecoprospector_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_corpo_tinker: "$job_tec_corpo_tinker$"
+	concept_tec_ruler_job_tec_corpo_tinker_alias: "$job_tec_corpo_tinker$"
+	concept_tec_ruler_job_tec_corpo_tinker_icon: "£job_tec_corpo_tinker£ $job_tec_corpo_tinker$"
+	concept_tec_ruler_job_tec_corpo_tinker_plural: "$job_tec_corpo_tinker_plural$"
+	concept_tec_ruler_job_tec_corpo_tinker_plural_icon: "£job_tec_corpo_tinker£ $job_tec_corpo_tinker_plural$"
+	concept_tec_ruler_job_tec_corpo_tinker_desc: "§L$job_tec_corpo_tinker_desc$§!\n\n$job_tec_corpo_tinker_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_corpo_agrarian_manager: "$job_tec_corpo_agrarian_manager$"
+	concept_tec_ruler_job_tec_corpo_agrarian_manager_alias: "$job_tec_corpo_agrarian_manager$"
+	concept_tec_ruler_job_tec_corpo_agrarian_manager_icon: "£job_tec_corpo_agrarian_manager£ $job_tec_corpo_agrarian_manager$"
+	concept_tec_ruler_job_tec_corpo_agrarian_manager_plural: "$job_tec_corpo_agrarian_manager_plural$"
+	concept_tec_ruler_job_tec_corpo_agrarian_manager_plural_icon: "£job_tec_corpo_agrarian_manager£ $job_tec_corpo_agrarian_manager_plural$"
+	concept_tec_ruler_job_tec_corpo_agrarian_manager_desc: "§L$job_tec_corpo_agrarian_manager_desc$§!\n\n$job_tec_corpo_agrarian_manager_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
+	concept_tec_ruler_job_tec_corpo_litho_manager: "$job_tec_corpo_litho_manager$"
+	concept_tec_ruler_job_tec_corpo_litho_manager_alias: "$job_tec_corpo_litho_manager$"
+	concept_tec_ruler_job_tec_corpo_litho_manager_icon: "£job_tec_corpo_litho_manager£ $job_tec_corpo_litho_manager$"
+	concept_tec_ruler_job_tec_corpo_litho_manager_plural: "$job_tec_corpo_litho_manager_plural$"
+	concept_tec_ruler_job_tec_corpo_litho_manager_plural_icon: "£job_tec_corpo_litho_manager£ $job_tec_corpo_litho_manager_plural$"
+	concept_tec_ruler_job_tec_corpo_litho_manager_desc: "§L$job_tec_corpo_litho_manager_desc$§!\n\n$job_tec_corpo_litho_manager_effect_desc$\n\nStratum: §Y$pop_cat_ruler$§!\nProduces:\n\n"
+
 	#concept_tec_ruler_job_BASE: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_alias: "$job_BASE$"
 	#concept_tec_ruler_job_BASE_icon: "£job_BASE£ $job_BASE$"
@@ -588,6 +638,20 @@
 	concept_tec_specialist_job_tec_transcendent_corporate_plural_icon: "£job_tec_transcendent£ $job_tec_transcendent_plural$"
 	concept_tec_specialist_job_tec_transcendent_corporate_desc: "§L$job_tec_transcendent_desc$§!\n\n$job_tec_transcendent_effect_desc_corporate$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
 
+	concept_tec_specialist_job_reassigner: "$job_reassigner$"
+	concept_tec_specialist_job_reassigner_alias: "$job_reassigner$"
+	concept_tec_specialist_job_reassigner_icon: "£job_reassigner£ $job_reassigner$"
+	concept_tec_specialist_job_reassigner_plural: "$job_reassigner_plural$"
+	concept_tec_specialist_job_reassigner_plural_icon: "£job_reassigner£ $job_reassigner_plural$"
+	concept_tec_specialist_job_reassigner_desc: "§L$job_reassigner_desc$§!\n\n$job_reassigner_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
+	concept_tec_specialist_job_tec_zombie_master: "$job_tec_zombie_master$"
+	concept_tec_specialist_job_tec_zombie_master_alias: "$job_tec_zombie_master$"
+	concept_tec_specialist_job_tec_zombie_master_icon: "£job_tec_zombie_master£ $job_tec_zombie_master$"
+	concept_tec_specialist_job_tec_zombie_master_plural: "$job_tec_zombie_master_plural$"
+	concept_tec_specialist_job_tec_zombie_master_plural_icon: "£job_tec_zombie_master£ $job_tec_zombie_master_plural$"
+	concept_tec_specialist_job_tec_zombie_master_desc: "§L$job_tec_zombie_master_desc$§!\n\n$job_tec_zombie_master_effect_desc_standard$\n\nStratum: §Y$pop_cat_specialist$§!\nProduces:\n\n"
+
 	# Drones
 	concept_tec_specialist_job_bath_attendant_hive: "$job_bath_attendant_hive$"
 	concept_tec_specialist_job_bath_attendant_hive_alias: "$job_bath_attendant_hive$"
@@ -674,6 +738,13 @@
 	concept_tec_worker_job_tec_pleasure_giver_plural: "$job_tec_pleasure_giver_plural$"
 	concept_tec_worker_job_tec_pleasure_giver_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
 	concept_tec_worker_job_tec_pleasure_giver_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
+
+	concept_tec_worker_job_tec_pleasure_giver_corporate: "$job_tec_pleasure_giver$"
+	concept_tec_worker_job_tec_pleasure_giver_corporate_alias: "$job_tec_pleasure_giver$"
+	concept_tec_worker_job_tec_pleasure_giver_corporate_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver$"
+	concept_tec_worker_job_tec_pleasure_giver_corporate_plural: "$job_tec_pleasure_giver_plural$"
+	concept_tec_worker_job_tec_pleasure_giver_corporate_plural_icon: "£job_tec_pleasure_giver£ $job_tec_pleasure_giver_plural$"
+	concept_tec_worker_job_tec_pleasure_giver_corporate_desc: "§L$job_tec_pleasure_giver_desc$§!\n\n$job_tec_pleasure_giver_effect_desc_corporate$\n\nStratum: §Y$pop_cat_worker$§!\nProduces:\n\n"
 
 	concept_tec_worker_job_tec_druid: "$job_tec_druid$"
 	concept_tec_worker_job_tec_druid_alias: "$job_tec_druid$"
